webkit scrollbar fix attempt

--- a/css/general/parallax.scss
+++ b/css/general/parallax.scss
@@ -23,7 +23,7 @@ article#main {
     perspective: 300px;
     overflow-x: hidden;
     overflow-y: auto;
-    height: 100vh;
+    height: 100%;
 
     .section {
         position: relative;
